# SoulX-FlashTalk

./: .env.example  .gitignore  TODOS.md  app.py  config.py  generate_video.py  gradio_app.py  pyproject.toml  requirements.txt  start_backend.sh  start_frontend.sh
docs/: ai-pipeline-stability-plan.md  db-integration-plan.md  frontend-refactor-plan.md  integration-plan.md  playlist-feature-plan.md  results-page-overhaul-plan.md  s3-bucket-setup.md  step3-motion-spec.md
frontend/: .prettierignore  REFACTOR_PLAN.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  prettier.config.js  tsconfig.json  vite.config.js  vitest.config.js
modules/: auth.py  composite_generator.py  conversation_compositor.py  conversation_generator.py  db.py  dialog_parser.py  elevenlabs_stock_cache.py  elevenlabs_tts.py  host_generator.py  image_compositor.py  job_handlers.py  job_input.py  job_runner.py  jobs_pubsub.py  lifecycle.py  multitalk_inference.py  musetalk_hybrid.py  schemas.py  storage.py  storage_s3.py  task_queue.py  video_matting.py
scripts/: _lib.py  backfill_elevenlabs_voices_to_jack.py  backfill_legacy_queue.py  backfill_manifest_keys.py  backfill_pr4_key_rename.py  backfill_studio_results_failures.py  dev_mongod.sh  migrate_lifecycle.py  run_inference_subprocess.py  seed_dev_db.py  smoke_phase2.py  studio_006_add_subscriptions.py  studio_007_local_import.py  studio_008_generation_jobs.py  upload_examples_to_s3.py
tests/: conftest.py  test_api_composite_generate.py  test_api_elevenlabs_generate.py  test_api_elevenlabs_voice_scoping.py  (+45 more)
(+284 files in other folders)
